--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="../final code/final .css" rel="stylesheet">
+    <link href="./final code/final .css" rel="stylesheet">
     
 </head>
 <body style="background-color: white;">
@@ -34,8 +34,8 @@
     <!-- aptiwise logo -->
     <div class="container-fluid">
         <div >    
-         <img src="../Images/logo/logo.jpg" style="margin-left: -450px; height: 250px; width: 500px ;">   
-         <img src="../Images/logo/banner2.png" style="height: 250px;width: 700px; margin-left: 100px;">
+         <img src="./Images/logo/logo.jpg" style="margin-left: -450px; height: 250px; width: 500px ;">   
+         <img src="./Images/logo/banner2.png" style="height: 250px;width: 700px; margin-left: 100px;">
     </div>
     </div>
     <!-- navbar2 -->  
@@ -44,8 +44,8 @@
             <li><a href="#test">Aptitude Quiz</a></li>
             <li><a href="#know">Know us</a></li>
             <li><a href="#cards">Live Quiz</a></li>
-            <li><a href="../my account/acc.html">My Account</a></li>         
-            <li><a href="../login/login.html">Login</a></li>         
+            <li><a href="./my account/acc.html">My Account</a></li>         
+            <li><a href="./login/login.html">Login</a></li>         
         </ul>
     </nav>
      <!-- carousel -->
@@ -59,13 +59,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Images/carousel image/img1.avif" class="d-block w-100" style="height: 410px;" alt="...">
+                <img src="./Images/carousel image/img1.avif" class="d-block w-100" style="height: 410px;" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Images/carousel image/img2.avif" class="d-block w-100" style="height: 410px;" alt="...">
+                <img src="./Images/carousel image/img2.avif" class="d-block w-100" style="height: 410px;" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../Images/carousel image/img3.avif" class="d-block w-100" style="height: 410px;" alt="...">
+                <img src="./Images/carousel image/img3.avif" class="d-block w-100" style="height: 410px;" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -102,7 +102,7 @@
             <div class="col-sm-6" >
               <div class="card" >
                 <div class="card-body" style="height: 500px; background-color: white; padding-left: 5%;">
-                  <img src="../Images/logo/logo.jpg" style="width: 80%; padding: 1%;">
+                  <img src="./Images/logo/logo.jpg" style="width: 80%; padding: 1%;">
                   <p class="card-text" style="font-size: 150%; font-family: cursive;">Aptiwize is an aptitude test website that aims to help individuals improve their aptitude skills and prepare for various competitive exams, such as entrance tests for colleges, job placement assessments, and other examinations that assess cognitive abilities.</p>
                   
                 </div>
@@ -123,41 +123,41 @@
             </div>
           </div>
       </div>  
-    <div style="background-image: url(../Images/background/Untitled.png);" >
+    <div style="background-image: url(./Images/background/Untitled.png);" >
     <!-- cards -->
     <div class="container mt-4 " id="cards">
       <h1 style="color: #FFD700; text-align: center; font-size: 36px; text-shadow: 2px 2px 4px #000000;">LIVE QUIZ</h1>
         <div class="row mt-3 ">
             <div class="col ">
                 <div class="card1" style="width: 21rem;">
-                    <img src="../Images/card image/quantitaive.avif" class="card-img-top " style="height: 200px; width: 335px;"  alt="...">
+                    <img src="./Images/card image/quantitaive.avif" class="card-img-top " style="height: 200px; width: 335px;"  alt="...">
                     <div class="card-body"  >
                       <h5 class="card-title">Quantitative</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Challenge your numerical prowess with a bite-sized quantitative quiz that puts your math skills to the test.</p>
-                      <a href="../questions database/quantitativeques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/quantitativeques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card2" style="width: 21rem; float: none; margin: 0 auto;">
-                    <img src="../Images/card image/data interpretation.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/data interpretation.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Data Interpretation</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Uncover hidden stories within data through the art of interpretation, where numbers come alive to reveal their tales.</p>
-                      <a href="../questions database/logicalques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/logicalques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card3" style="width: 21rem; float: right;">
-                    <img src="../Images/card image/verbal activity.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/verbal activity.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Verbal Activity</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Dive into the world of verbal activity, where words become the building blocks of expression and connection.</p>
-                      <a href="../questions database/verbalques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/verbalques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
@@ -165,34 +165,34 @@
         <div class="row mt-3">
             <div class="col ">
                 <div class="card4" style="width: 21rem;">
-                    <img src="../Images/card image/logical reasoning.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/logical reasoning.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Logical reasoning</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Embrace the art of logical reasoning, where puzzles unravel, minds sharpen, and the brilliance of rationality prevails.</p>
-                      <a href="../questions database/logicalques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/logicalques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card5" style="width: 21rem; float: none; margin: 0 auto;">
-                    <img src="../Images/card image/verbal reasoning.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/verbal reasoning.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Verbal reasoning</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Explore the realm of verbal reasoning, where language and logic converge to ignite critical thinking .</p>
-                      <a href="../questions database/verbalques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/verbalques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card6" style="width: 21rem; float: right">
-                    <img src="../Images/card image/puzzle.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/puzzle.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Puzzle</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Embark on a captivating puzzle journey, where challenges become opportunities for mental exploration </p>
-                      <a href="../questions database/puzzleques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/puzzleques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
@@ -200,34 +200,34 @@
         <div class="row mt-3">
             <div class="col ">
                 <div class="card7" style="width: 21rem;">
-                    <img src="../Images/card image/python.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/python.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">python programming</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Test your Python prowess with our challenging quiz and unleash the power of your code!</p>
-                      <a href="../questions database/pythonques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/pythonques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card8" style="width: 21rem; float: none; margin: 0 auto; ">
-                    <img src="../Images/card image/c++.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/c++.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">C++ programming</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Test your c++ prowess with our challenging quiz and unleash the power of your code!</p>
-                      <a href="../questions database/javaques.html" class="btn btn-primary">Play</a>
+                      <a href="./questions database/javaques.html" class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
             <div class="col ">
                 <div class="card9" style="width: 21rem; float: right" >
-                    <img src="../Images/card image/java.avif" class="card-img-top" style="height: 200px;" alt="...">
+                    <img src="./Images/card image/java.avif" class="card-img-top" style="height: 200px;" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Java programming</h5>
                       <p class="card-text">Questions: 10 </p>
                       <p>Test your JAVA prowess with our challenging quiz and unleash the power of your code!</p>
-                      <a href="../questions database/javaques.html"  class="btn btn-primary">Play</a>
+                      <a href="./questions database/javaques.html"  class="btn btn-primary">Play</a>
                     </div>
                   </div>
             </div>
